# NadiaAI

./: .env.example  .gitignore  MANUAL_NADIA.md  Makefile  README.md  STATUS.md  generate_excel.py  pyproject.toml
.github/workflows/: daily.yml  weekly-ine.yml
docs/: SETUP_GOOGLE_SHEETS.md
docs/research/: boa.md  catastro.md  concursal-rejected.md  delivery.md  seccion-IIB-rejected.md  tablon.md  tech-stack-decision.md
src/nadia_ai/: __init__.py  __main__.py  catastro.py  config.py  db.py  delivery.py  enrichment.py  ine.py  logging_config.py  merge.py  models.py  run.py
src/nadia_ai/scrapers/: __init__.py  boa.py  boe.py  bop.py  borme.py  tablon.py
tests/: conftest.py
tests/fixtures/boa/: convocatoria_2023_03_21.txt  convocatoria_2024_06_18.txt  convocatoria_table_structure.json  distribucion_2017_09_21.txt  search_results_index.json
tests/fixtures/tablon/: api_empty_response.json  api_list_herederos.json  api_pagination_metadata.json  api_single_record.json  edicto_herederos_sample.txt
tests/unit/: test_boa_parser.py  test_catastro.py  test_db.py  test_delivery.py  test_enrich.py  test_logging.py  test_merge.py  test_models.py  test_parsers.py  test_pipeline.py
